--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.1",
     "displayName": "Dialogue Graph",
     "description": "This package let's you create a dialogue scene using a node editor and then play it at runtime.",
-    "unity": "6000.2.6f2",
+    "unity": "6.2",
     "unityRelease": "0b5",
     "documentationUrl": "https://github.com/Wiggedbucket/Dialogue-System/blob/main/Assets/DialogueGraph/README.md",
     "changelogUrl": "https://github.com/Wiggedbucket/Dialogue-System/releases/tag/v1.0",
